--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>JavaScript</title>
 </head>
 <body>
+    <noscript>
+        Не працює
+    </noscript>
 <script src="./scripts/index.js">
 
 </script>
