--- a/HomeWork/Project/index.html
+++ b/HomeWork/Project/index.html
@@ -8,20 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-<div class="wrap">
-    <div>
-        <button id="start_btn">start button</button>
-    </div>
-<div class="position" id="display_box">
-<div id="btn_sector">
-  
+<h1>HOMEWORK</h1>
+<hr>
+<button id="start-btn">Start</button>
+<hr>
+<div id="display_box">
+
 </div>
+<hr>
     <!-- scripts -->
-    <script src="../Project/js/models/my_button.js"></script>
-    <script src="../Project/js/main.js"></script>
-</div>
-</div>
-</div>
+    
+    <script src="../Project/js/models/my_button.js" type="module"></script>
+    <script src="../Project/js/models/color_btn.js" type="module"></script>
+    <script src="../Project/js/main.js" type="module"></script>
 </body>
 </html>
