--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>JavaScript</title>
 </head>
 <body>
+<div class="wrap"><button class="btn" id="button"><p>click on the button to do the function</p></button></div>
+
 <script src="./scripts/index.js">
 
 </script>
