--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 <div class="wrap"><button class="btn" id="button"><p>click on the button to do the function</p></button></div>
-
-<script src="./scripts/index.js">
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.8/dayjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.8/plugin/dayOfYear.js"></script>
+<script type="module" src="./scripts/index.js">
 
 </script>
 </body>
