not finished yet

--- a/index.html
+++ b/index.html
@@ -2,14 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <title>JavaScript</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/favicon.ico">
+    <title>HOMEWORK TODOS</title>
 </head>
 <body>
-<script src="./scripts/index.js">
+<div class="container">
+    <h5>The best way to check your plans today!</h5>
+    <h1 class="yrList">Your list</h1>
 
-</script>
+    <form action="#" class="plansForm">
+        <label class="plans">
+            <input type="text" name="plansInput">
+            <div class="plansBtn__div"><button class="plans__btn" name="plansBtn">ADD</button></div>
+            
+        </label>
+        
+    </form>
+
+    <div class="plans-block">
+        <ul class="plans-list"></ul>
+    </div>
+
+
+</div>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
