--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
 </header>
 <main>
     <div class="galleryWrap">
-    <div><img src="./imgs/car1.jpg" alt=""></div>
-    <div><img src="./imgs/car2.jpg" alt=""></div>
-    <div><img src="./imgs/car3.jpg" alt=""></div>
-    <div><img src="./imgs/car4.png" alt=""></div>
-    <div><img src="./imgs/car5.png" alt=""></div>
-    <div><img src="./imgs/car6.jpg" alt=""></div>
+    <img src="./imgs/car1.jpg" alt="" class="Car">
+    <img src="./imgs/car2.jpg" alt="" class="Car">
+    <img src="./imgs/car3.jpg" alt="" class="Car">
+    <img src="./imgs/car4.png" alt="" class="Car">
+    <img src="./imgs/car5.png" alt="" class="Car">
+    <img src="./imgs/car6.jpg" alt="" class="Car">
 </div>
-    
 
+<div class="pop-up">
+    <span class="closer">&times;</span>
+    <img src="./imgs/car1.jpg" alt="">
+</div>
 
 </main>
 <footer></footer>
