not finished yet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>JavaScript</title>
 </head>
 <body>
+<header>
+    <div class="headerWrap">
+        <img src="./imgs/logo.png" alt="logo">
+        <h1>Beer</h1>
+        <h3>Try our beer!</h3>
+    </div>
+        
+</header>
+<main><h2>This is gallery!</h2></main>
+<footer>was created for homework on itstep</footer>
+
+
+
+
+
+
+
+
+
 <script src="./scripts/index.js">
 
 </script>
