--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./imgs/logo.png">
     <title>JavaScript</title>
 </head>
 <body>
@@ -16,8 +17,40 @@
     </div>
         
 </header>
-<main><h2>This is gallery!</h2></main>
-<footer>was created for homework on itstep</footer>
+<main><h2>This is gallery!</h2>
+<section class="slider-sect"><div class="slider">
+    <div class="slides">
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <input type="radio" name="radio-btn" id="radio4">
+   
+    <div class="slide first">
+        <img src="./imgs/beer1.jpg" alt="">
+    </div>
+    <div class="slide"><img src="./imgs/beer2.jpg" alt=""></div>
+    <div class="slide"><img src="./imgs/beer3.jpg" alt=""></div>
+    <div class="slide"><img src="./imgs/beer4.jpg" alt=""></div>
+</div>
+    <div class="auto-nav">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+        <div class="auto-btn4"></div>
+    </div>
+
+    <div class="manual-nav">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+        <label for="radio4" class="manual-btn"></label>
+    </div>
+</div></section>
+<section class="SlideShowBtnSect">
+    <div><button class="slideShowStart">start slideshow</button></div>
+</section>
+</main>
+
 
 
 
