--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>JavaScript</title>
 </head>
 <body>
+
+<canvas id="canvas" width="1000" height="1500"></canvas>
+
 <script src="./scripts/index.js">
 
 </script>
