--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>JavaScript</title>
 </head>
 <body>
+<header>myShop</header>
+<main><div id="product-container"></div></main>
+<footer></footer>
+
 <script src="./scripts/index.js">
 
 </script>
