--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./img/favicon.ico">
     <title>JavaScript</title>
 </head>
 <body>
-<header>myShop</header>
+<header>
+    <div class="container-header"><div><img src="./img/l1go.png" alt="logo"></div>
+    <h1>My Shop</h1></header></div>
+    
 <main><div id="product-container"></div></main>
 <footer></footer>
 
