--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
     <title>JavaScript</title>
 </head>
 <body>
-<header>
-    <div class="container-header"><div><img src="./img/l1go.png" alt="logo"></div>
-    <h1>My Shop</h1></header></div>
+<div class="container">
     
-<main><div id="product-container"></div></main>
-<footer></footer>
+    <header>
+        <div class="container-header">
+            <div><img src="./img/l1go.png" alt="logo"></div>
+            <h1>My Shop</h1>
+        </div>
+    </header>
 
+    <main>
+        <div id="product-container"></div>
+    </main>
+
+    <footer></footer>
+</div>
 <script src="./scripts/index.js">
 
 </script>
