--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <div class=".container-logncart">
                 <button id="cart"><img src="./img/cartimg.png" alt="cart"></button>
                 <button id="login"><img src="./img/loginimg.png" alt="login"></button>
+                <button id="logout"><img src="./img/logOutIcon.png" alt="logOut"></button>
             </div>
         </div>
     </header>
@@ -67,7 +68,7 @@
         <div id="product-container"></div>
     </main>
 
-    <footer></footer>
+    <footer><button class="add_product_btn">Add product</button></footer>
 </div>
 <script src="./scripts/index.js">
 
