--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div><img src="./img/l1go.png" alt="logo"></div>
             <h1>My Shop</h1>
         </div>
-            <div class=".container-logncart">
+            <div class="container-logncart">
                 <button id="cart"><img src="./img/cartimg.png" alt="cart"></button>
                 <button id="login"><img src="./img/loginimg.png" alt="login"></button>
                 <button id="logout"><img src="./img/logOutIcon.png" alt="logOut"></button>
